fix(Map): Fullscreen controls work on mobile safari (#1773)
* fix(Map): Import fullscreen control styles for mobile support

* fix(VPP style): set z-index for map via css for fullscreen on mobile safari

* fix(Map): Override fullscreen styles

* doc: fullscreen-icon override details

* fix: move fullscreen control import

* fix: use styles directly instead of importing

* refactor: clearer use of properties panel z index, organize by context

* fix: remove stray @use sass:map

--- a/assets/css/_nav.scss
+++ b/assets/css/_nav.scss
@@ -34,7 +34,7 @@
 }
 
 .m-nav__nav-bar {
-  z-index: $navbar-z-index;
+  z-index: map-get($z-page-layout-context, "navbar");
 }
 
 .m-nav__nav-bar--left {
