--- a/assets/css/properties_panel/_vehicle_properties_panel.scss
+++ b/assets/css/properties_panel/_vehicle_properties_panel.scss
@@ -58,10 +58,15 @@
   flex-direction: column;
   margin-top: 1rem;
   min-height: 320px;
-  z-index: 9;
 
   .m-vehicle-map {
     flex: 1 0 auto;
+    z-index: map-get($z-properties-panel-context, "map");
+  }
+  // Fullscreen on mobile safari not naitively supported - uses 'pseudo-fullscreen' css
+  // Ensure fullscreen VPP map appears above VPP header
+  .m-vehicle-map.leaflet-pseudo-fullscreen {
+    z-index: map-get($z-properties-panel-context, "fullscreen-map");
   }
 }
 
